# openstack-operator

./: .dockerignore  .gitignore  .gitreview  .stestr.conf  .zuul.yaml  Dockerfile  Makefile  PROJECT  go.mod  go.sum  main.go  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
builders/: config_map.go  container.go  deployment.go  mcrouter.go  mcrouter_pool_spec.go  pod_metrics_endpoint.go  pod_monitor.go  pod_spec.go  pod_template_spec.go  prometheus_rule.go  pvc.go  rule.go  rule_group.go  secret.go  security_context.go  service.go  statefulset.go  volume.go  zone.go
chart/: Chart.yaml  test-values.yaml  values.yaml
controllers/: designate_controller.go  mcrouter_controller.go  memcached_controller.go  rabbitmq_controller.go  suite_test.go  zone_controller.go
devstack/: override-defaults  plugin-barbican.sh  plugin-magnum.sh  plugin.sh  settings
doc/: requirements.txt
hack/: boilerplate.go.txt  update-zuul-jobs.py
openstack_operator/: barbican.py  ceilometer.py  chronyd.py  cinder.py  database.py  filters.py  glance.py  heat.py  horizon.py  identity.py  keystone.py  libvirtd_exporter.py  magnum.py  mcrouter.py  memcached.py  neutron.py  nova.py  objects.py  operator.py  placement.py  rabbitmq.py  utils.py
utils/: kubernetes.go
version/: main.go
zuul.d/: barbican-jobs.yaml  ceilometer-jobs.yaml  chronyd-jobs.yaml  cinder-jobs.yaml  functional-jobs.yaml  glance-jobs.yaml  heat-jobs.yaml  horizon-jobs.yaml  keystone-jobs.yaml  magnum-jobs.yaml  mcrouter-exporter-jobs.yaml  mcrouter-jobs.yaml  memcached-exporter-jobs.yaml  misc-jobs.yaml  (+6 more)
(+299 files in other folders)
