[metadata]
name = openstack-operator

[entry_points]
operators =
    glance = openstack_operator.glance
    heat = openstack_operator.heat
    horizon = openstack_operator.horizon
    keystone = openstack_operator.keystone
    magnum = openstack_operator.magnum

[files]
packages =
    openstack_operator
