[metadata]
name = openstack-operator

[entry_points]
operators =
    barbican = openstack_operator.barbican
    glance = openstack_operator.glance
    heat = openstack_operator.heat
    horizon = openstack_operator.horizon
    keystone = openstack_operator.keystone
    magnum = openstack_operator.magnum
    neutron = openstack_operator.neutron
    nova = openstack_operator.nova

[files]
packages =
    openstack_operator
